# PytorchForge

./: LICENSE  README.md
client/: CONTRIBUTORS  package.json
client/app/dummy/: pipelineDLFormData.ts
client/app/routes/new-pipeline.dl._index/sections/preProcessing/TransformersParamSections/Spectrogram/: Normalized.field.tsx
server/: CONTRIBUTERS  LICENSE  README.md  main.spec  openapi.json  pyoxidizer.bzl  pyproject.toml  server.spec
server/modules/: main.py  parser.py  pyproject.toml  server.py  test_parser.py
server/modules/configs/: datasetconfig.py  modelconfig.py  preprocessingconfig.py  taskconfig.py  trainconfig.py
server/modules/configs/registries/: aliasreg.py  layerreg.py  lossreg.py  metricreg.py  modelreg.py  optimizerreg.py  preprocessingreg.py  schedulerreg.py  taskreg.py
server/templates/: imports.j2  runner.j2  setup.j2
server/templates/data/loaders/: forUI.md  note.md
server/templates/data/loaders/audio/: classification.j2  conversion.j2  generation.j2  recognition.j2
server/templates/data/loaders/image/: classification.j2  generation.j2  object_detection.j2  segmentation.j2
server/templates/data/loaders/text/: classification.j2  generation.j2  summarisation.j2  translation.j2
server/templates/data/transforms/: audio.j2  image.j2  text.j2
server/templates/models/: audio.j2  image.j2  layers.j2  text.j2
server/templates/train/: eval_loop.j2  losses.j2  metrics.j2  monitoring.j2  optimizers.j2  train_loop.j2  utils.j2
