[project]
name = "autopipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

[project.dependencies]
torch = "*"
torchvision = "*"
torchmetrics = "*"
numpy = "*"
Pillow = "*"

[tool.uv.index]
pytorch-cu124 = { url = "https://download.pytorch.org/whl/cu124", explicit = true }
pytorch-cpu = { url = "https://download.pytorch.org/whl/cpu", explicit = true }

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" }
]